# UnityGDK-proto

./: BuildAssem.bat  cloud_launch.json  default_launch.json  spatialos.json
schema/npc/: state.schema
schema/player/: Player_movement.schema  chat.schema  player_health.schema  player_input.schema
snapshots/: default.snapshot
workers/AIWorker/: CMakeLists.txt  build.sh  build_schema.sh  cross-compile.sh  spatialos.AIWorker.worker.json
workers/AIWorker/src/: AIWorker.cpp  AIWorker.h  startup.cc
workers/AIWorker/src/AuthorityDelegator/: AuthorityDelgator.cpp  AuthorityDelgator.h
workers/AIWorker/src/CommandSender/: CommandResponseObject.h  CommandResponseSummary.h  CommandSender.h  ICommandStatusReporter.h  IResponseObject.h  IRetryNotifier.h  RetryStrategyConfig.h
workers/AIWorker/src/EntityBuilder/: EntityBuilder.cpp  EntityBuilder.h
workers/AIWorker/src/QuerySender/: QuerySender.cpp  QuerySender.h
workers/AIWorker/src/RequireExternal/: ILogger.h
workers/AIWorker/src/Samples/: EntityBuilderExample.cpp  ExponentialBackoff.cpp  ExponentialBackoff.h  IScheduler.h  QueryExample.cpp  SampleCommandSenders.h  SampleLogger.cpp  SampleLogger.h  SampleRetryNotifier.cpp  SampleScheduler.cpp  SampleScheduler.h
workers/ChatWorker/: .gitignore  CMakeLists.txt  build.sh  clean.sh  cross-compile.sh  spatialos.ChatWorker.worker.json
workers/ChatWorker/src/: ChatWorker.cpp  ChatWorker.h  startup.cc
workers/ChatWorker/src/CommandSender/: CommandId.h  CommandResponse.h  CommandSender.cpp  ICommandStatusReporter.h  IRetryNotifier.h  RetryStrategyConfig.h
workers/ChatWorker/src/RequireExternal/: ExternalSingletons.cpp
workers/ChatWorker/src/Samples/: CommandSenderExample.cpp  EntityBuilderExample.cpp  SampleCommandSenders.cpp  SampleLogger.cpp  SampleRetryNotifier.h  SampleScheduler.cpp  SampleScheduler.h  SpatialOSUtilitiesExamples.h
workers/unity/Assets/: HealthHandlerClient.cs  MovementHandlerClient.cs  MovementHandlerServer.cs  SpatialOS Build Configuration.asset
workers/unity/Assets/Config/: BuildConfiguration.asset  EntityCreationTemplate.cs
workers/unity/Assets/Editor/SnapshotGenerator/: SnapshotGenerator.cs  SnapshotGeneratorWindow.cs
workers/unity/Assets/Resources/: DirectReceiveStrategy.asset  InterpolationReceiveStrategy.asset  InterpolationReceiveStrategy2.asset  RateLimitedSendStrategy.asset
workers/unity/Assets/Resources/Materials/: AnotherPlayerBody.mat  NPC.mat
workers/unity/Assets/Scenes/: ClientScene.unity  DevelopmentScene.unity  GameLogicScene.unity  UnityVanilaTest.unity
workers/unity/Assets/Scenes/GameLogicScene/: NavMesh.asset
workers/unity/Assets/Scenes/UnityVanilaTest/: NavMesh.asset
workers/unity/Assets/Scripts/: AIStateHandler.cs  ChatHandler.cs  ChatMananger.cs  HealthHandlerServer.cs  InputHandler.cs  MetricSendSystem.cs  MovementHandlerClient.cs  MovementHandlerServer.cs  WorkerUtils.cs
workers/unity/Assets/Scripts/Workers/: UnityClientConnector.cs  (+2 more)
workers/unity/ProjectSettings/: TagManager.asset
(+12 files in other folders)
